--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "js": "rimraf dist-esnext & tsc & rimraf dist & babel dist-esnext -d dist --presets es2015 --source-maps",
     "pretest": "npm-run-all --parallel js lint",
     "mocha": "mocha ./dist/**/*.js --require babel-polyfill",
-    "test": "nyc npm run mocha & nyc report --reporter=html --reporter=text-lcov > coverage.lcov & f() { EXIT=0; codecov --token= || exit $EXIT; }; f",
+    "test": "nyc npm run mocha && nyc report --reporter=html --reporter=text-lcov > coverage.lcov && codecov --token=f5186102-ac15-4a2f-9212-bf219e981ada",
     "test:cover": "npm run test & opn ./coverage/index.html",
     "predebug": "npm run pretest",
     "debug": "node --nolazy --debug-brk=5858 dist/index.js",
