--- a/package.json
+++ b/package.json
@@ -6,18 +6,17 @@
   "typings": "src/index.ts",
   "scripts": {
     "lint": "tslint ./src/**/*.ts ./src/**/*.test.ts ./src/**/*.d.ts",
-    "js": "rimraf ./output/dist-esnext & tsc & rimraf ./output/dist & babel ./output/dist-esnext -d ./output/dist --presets es2015 --source-maps",
+    "js": "rimraf ./output/dist-esnext && tsc && rimraf ./output/dist && babel ./output/dist-esnext -d ./output/dist --presets es2015 --source-maps",
     "pretest": "npm-run-all --parallel js lint",
     "mocha": "mocha ./output/dist/**/*.js --require babel-polyfill",
     "test": "nyc npm run mocha && nyc report --reporter=html --reporter=text-lcov > coverage.lcov && codecov --token=f5186102-ac15-4a2f-9212-bf219e981ada",
-    "test:cover": "npm run test & opn ./output/coverage/index.html",
+    "test:cover": "npm run test && opn ./output/coverage/index.html",
     "predebug": "npm run pretest",
-    "postinstall": "npm run js",
     "debug": "node --nolazy --debug-brk=5858 ./output/dist/index.js",
     "docs:build": "typedoc --out ./docs ./ --includeDeclarations --excludeExternals --exclude '**/*.test.ts'",
     "docs": "npm run docs:build && opn ./output/docs/index.html",
     "start": "npm-run-all --parallel gensalt server",
-    "server": "npm run js & babel-node --presets es2015 ./output/dist/index.js",
+    "server": "npm run js && babel-node --presets es2015 ./output/dist/index.js",
     "gensalt": "node gensalt.js"
   },
   "repository": {
