remove output dir

--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -3,7 +3,7 @@
     "promptValues": {
       "appname": "sample-graphql",
       "githubAuthor": "polutz",
-      "codecovToken": ""
+      "codecovToken": "f5186102-ac15-4a2f-9212-bf219e981ada"
     }
   }
 }
