Add node.dockerfile to all services

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "docs": "npm run docs:build && opn ./docs/index.html",
     "start": "npm-run-all --parallel gensalt server",
     "server": "npm run js && babel-node ./dist/index.js",
+    "serve": "babel-node ./dist/index.js",
     "gensalt": "node gensalt.js"
   },
   "repository": {
@@ -32,17 +33,13 @@
   "devDependencies": {
     "@types/mocha": "^2.2.40",
     "@types/node": "^8.0.25",
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.6.0",
     "codecov": "^2.3.0",
     "istanbul": "^0.4.5",
     "mocha": "^3.5.0",
     "mocha-lcov-reporter": "^1.3.0",
-    "npm-run-all": "^4.0.2",
     "nyc": "^11.1.0",
     "opn-cli": "^3.1.0",
     "ptz-assert": "^1.6.8",
-    "rimraf": "^2.6.1",
     "sinon": "^3.2.1",
     "tslint": "^5.7.0",
     "typedoc": "^0.8.0",
@@ -55,7 +52,11 @@
     "cors": "^2.8.3",
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
+    "npm-run-all": "^4.0.2",
     "express-graphql": "^0.6.7",
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.6.0",
+    "rimraf": "^2.6.1",
     "graphql": "^0.11.1",
     "graphql-relay": "^0.5.2",
     "mongodb": "^2.2.31",
